--- a/fr/page1.html
+++ b/fr/page1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -9,94 +9,102 @@
     <title>Dobby est libre</title>
   </head>
 <body>
-  <main>
     <header>
       <a href=""><img src="/public/img/logo.webp"></a>
       <p>A PROPOS</p><p>GLOSSAIRE</p>
     </header>
-    <section class="landing">
-      <img src="/public/img/Head.webp" alt="accueui">
-      <div>
-        <p>FR / ENG</p>
-        <h1>Dobby est libre</h1>
-      </div>
-      <p>
-        Bienvenue dans le monde magique de notre site dédié à Harry Potter !
-        Plongez dans l'univers ensorcelant de la saga qui a captivé des millions de fans à travers le monde.
-        Découvrez des articles fascinants, des analyses approfondies, des anecdotes inédites et un espace chaleureux pour les passionnés.
-        Rejoignez-nous dans cette aventure où la magie est réelle, l'amitié est précieuse, et l'aventure n'a pas de fin. Que vous soyez un sorcier chevronné ou un Moldu curieux,
-        il y a toujours quelque chose de magique à explorer ici. Venez, laissez-vous envoûter et faites partie de cette communauté qui célèbre l'univers inoubliable d'Harry Potter
-      </p>
-      <img src="/public/img/illu_harry.webp" alt="illustration">
-    </section>
-    <section class="articles">
-      <div class="article1">
-        <h1>Introduction aux articles</h1>
-        <h2>La Saga Magique Qui a Enchanté le Monde</h2>
-        <a href=""><img src="/public/img/HarryP1 banner.webp"></a>
-        <p>Ici, une exploration immersive de l'univers captivant de Harry Potter.
-          Depuis sa première publication en 1997,
-          cette saga littéraire a séduit un public diversifié grâce à son mélange unique de magie et d'aventure.
-          Au cœur de l'histoire se trouve Poudlard, l'école de sorcellerie qui est devenue un chez-soi pour les personnages principaux,
-          tout en inspirant des générations de fans.
-          Cependant, Harry Potter va au-delà des pages des livres et des images sur grand écran.
-          La magie s'étend dans le monde réel à travers des parcs à thème, des jeux vidéo, des produits dérivés et une communauté de fans dévoués.
-        </p>
-        <a href=""><img src="/public/img/partager" alt="partager"></a>
-        <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
-      </div>
-      <div class="article2">
-        <h2>Le Début Magique d'une Saga Épique</h2>
-        <a href=""><img src="/public/img/HarryP1.webp"></a>
-        <p>Plongez ensuite dans la magie envoûtante qui a enchanté le monde entier.
-          L'article "Harry Potter à l'École des Sorciers : Le Début Magique d'une Saga Épique" vous transporte au commencement de l'aventure extraordinaire de Harry Potter.
-          Découvrez comment ce premier livre a capturé l'imagination de millions de lecteurs et a ouvert les portes d'un univers ensorcelant.
-          Suivez Harry depuis sa rencontre avec les Dursley jusqu'à l'arrivée de cette lettre magique qui a tout changé, l'invitant à Poudlard,
-          l'école de sorcellerie. Explorez les merveilles et les mystères de Poudlard aux côtés de Harry, Ron et Hermione, et plongez-vous dans l'histoire captivante de la lutte contre le sorcier maléfique, Lord Voldemort.
-          Cette aventure commence ici, sur cette page, où la magie et l'émerveillement vous attendent.
-        </p>
-        <a href=""><img src="/public/img/partager" alt="partager"></a>
-        <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
-      </div>
-      <div class="article3">
-        <h2>La Conclusion Épique d'une Saga Magique</h2>
-        <a href=""><img src="/public/img/Harry_gare.webp"></a>
+    <main>
+      <section class="landing">
+        <img src="/public/img/Head.webp" alt="accueuil">
+        <div>
+          <p>FR / ENG</p>
+          <h1>Dobby est libre</h1>
+        </div>
         <p>
-          "Harry Potter et les Reliques de la Mort : La Conclusion Épique d'une Saga Magique" est une plongée profonde dans le dernier chapitre de l'aventure légendaire de Harry,
-          Ron et Hermione. Découvrez comment cette conclusion épique répond aux questions en suspens, explore les moments les plus sombres de la saga et célèbre le triomphe du courage sur le mal.
-          Cette aventure cinématographique émotionnelle est le prélude à une conclusion épique qui touchera tous les fans en profondeur.
-          Replongez dans l'univers magique de Harry Potter, revivez les moments inoubliables qui ont marqué la fin de cette série légendaire et découvrez comment la magie continue de vivre,
-          où l'amitié est précieuse et où l'aventure n'a pas de fin. C'est une invitation à revisiter une saga qui a captivé des générations de lecteurs et de cinéphiles.
+          Bienvenue dans le monde magique de notre site dédié à Harry Potter !
+          Plongez dans l'univers ensorcelant de la saga qui a captivé des millions de fans à travers le monde.
+          Découvrez des articles fascinants, des analyses approfondies, des anecdotes inédites et un espace chaleureux pour les passionnés.
+          Rejoignez-nous dans cette aventure où la magie est réelle, l'amitié est précieuse, et l'aventure n'a pas de fin. Que vous soyez un sorcier chevronné ou un Moldu curieux,
+          il y a toujours quelque chose de magique à explorer ici. Venez, laissez-vous envoûter et faites partie de cette communauté qui célèbre l'univers inoubliable d'Harry Potter
         </p>
-        <a href=""><img src="/public/img/partager" alt="partager"></a>
-        <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
-      </div>
-      <div class="article4">
-        <h2>La Mélodie Enchantée de la Saga Harry Potter</h2>
-        <a href=""><img src="/public/img/Hedwige.webp"></a>
-        <p>
-          Nous verrons la signification profonde de la mélodie emblématique composée par John Williams pour la saga Harry Potter. Cette mélodie, baptisée Hedwig's Theme en l'honneur de la chouette d'Harry, est bien plus qu'une simple musique de film.
-          L'article décrit comment cette mélodie, jouée par un orchestre symphonique, évoque un sentiment d'enchantement, de mystère et d'aventure, transportant instantanément les auditeurs dans l'univers fantastique de Poudlard. La mélodie est présente du premier au dernier film de la série, créant une continuité émotionnelle pour les fans.
-          Au-delà de la magie, "Hedwig's Theme" incarne une gamme d'émotions, rappelant aux auditeurs que la magie de Harry Potter réside dans l'amitié, le courage, et le pouvoir de l'amour.Chaque note de "Hedwig's Theme" nous rappelle que la magie est partout, si l'on sait où chercher.
-        </p>
-        <a href=""><img src="/public/img/partager" alt="partager"></a>
-        <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
-      </div>
-      <div class="article5">
-        <h2>Les Mage Derrière la Réalisation de Harry Potter</h2>
-        <a href=""><img src="/public/img/Chaise.webp"></a>
-        <p>
-          Finalement découvrez les Mages Derrière l'Écran : Les Réalisateurs Qui Ont Magistralement Porté Harry Potter à la Vie
-          Les films Harry Potter sont célèbres pour avoir capturé la magie de Poudlard et l'essence des personnages bien-aimés de J.K. Rowling. Cependant, derrière chaque film se trouve un réalisateur talentueux qui a insufflé une vision artistique unique dans cette épopée magique. Dans cet article, nous plongerons dans le monde des réalisateurs qui ont contribué à faire de Harry Potter une réalité cinématographique.
-          L'héritage de Harry Potter continue de briller sur grand écran, et chaque film est une preuve de la magie intemporelle de Poudlard. Plongez dans cette aventure cinématographique et explorez le talent qui a donné vie à cette saga inoubliable. La magie continue, et la quête de Harry, Ron et Hermione reste éternelle.
-        </p>
-        <a href=""><img src="/public/img/partager" alt="partager"></a>
-        <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
-      </div>
-    </section>
+        <img src="/public/img/illu_harry.webp" alt="illustration">
+      </section>
+      <section class="articles">
+        <div class="article1">
+          <h1>Introduction aux articles</h1>
+          <h2>La Saga Magique Qui a Enchanté le Monde</h2>
+          <a href=""><img src="/public/img/HarryP1 banner.webp"></a>
+          <p>Ici, une exploration immersive de l'univers captivant de Harry Potter.
+            Depuis sa première publication en 1997,
+            cette saga littéraire a séduit un public diversifié grâce à son mélange unique de magie et d'aventure.
+            Au cœur de l'histoire se trouve Poudlard, l'école de sorcellerie qui est devenue un chez-soi pour les personnages principaux,
+            tout en inspirant des générations de fans.
+            Cependant, Harry Potter va au-delà des pages des livres et des images sur grand écran.
+            La magie s'étend dans le monde réel à travers des parcs à thème, des jeux vidéo, des produits dérivés et une communauté de fans dévoués.
+          </p>
+          <a href=""><img src="/public/img/partager" alt="partager"></a>
+          <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
+        </div>
+        <div class="article2">
+          <h2>Le Début Magique d'une Saga Épique</h2>
+          <a href=""><img src="/public/img/HarryP1.webp"></a>
+          <p>Plongez ensuite dans la magie envoûtante qui a enchanté le monde entier.
+            L'article "Harry Potter à l'École des Sorciers : Le Début Magique d'une Saga Épique" vous transporte au commencement de l'aventure extraordinaire de Harry Potter.
+            Découvrez comment ce premier livre a capturé l'imagination de millions de lecteurs et a ouvert les portes d'un univers ensorcelant.
+            Suivez Harry depuis sa rencontre avec les Dursley jusqu'à l'arrivée de cette lettre magique qui a tout changé, l'invitant à Poudlard,
+            l'école de sorcellerie. Explorez les merveilles et les mystères de Poudlard aux côtés de Harry, Ron et Hermione, et plongez-vous dans l'histoire captivante de la lutte contre le sorcier maléfique, Lord Voldemort.
+            Cette aventure commence ici, sur cette page, où la magie et l'émerveillement vous attendent.
+          </p>
+          <a href=""><img src="/public/img/partager" alt="partager"></a>
+          <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
+        </div>
+        <div class="article3">
+          <h2>La Conclusion Épique d'une Saga Magique</h2>
+          <a href=""><img src="/public/img/Harry_gare.webp"></a>
+          <p>
+            "Harry Potter et les Reliques de la Mort : La Conclusion Épique d'une Saga Magique" est une plongée profonde dans le dernier chapitre de l'aventure légendaire de Harry,
+            Ron et Hermione. Découvrez comment cette conclusion épique répond aux questions en suspens, explore les moments les plus sombres de la saga et célèbre le triomphe du courage sur le mal.
+            Cette aventure cinématographique émotionnelle est le prélude à une conclusion épique qui touchera tous les fans en profondeur.
+            Replongez dans l'univers magique de Harry Potter, revivez les moments inoubliables qui ont marqué la fin de cette série légendaire et découvrez comment la magie continue de vivre,
+            où l'amitié est précieuse et où l'aventure n'a pas de fin. C'est une invitation à revisiter une saga qui a captivé des générations de lecteurs et de cinéphiles.
+          </p>
+          <a href=""><img src="/public/img/partager" alt="partager"></a>
+          <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
+        </div>
+        <div class="article4">
+          <h2>La Mélodie Enchantée de la Saga Harry Potter</h2>
+          <a href=""><img src="/public/img/Hedwige.webp"></a>
+          <p>
+            Nous verrons la signification profonde de la mélodie emblématique composée par John Williams pour la saga Harry Potter. Cette mélodie, baptisée Hedwig's Theme en l'honneur de la chouette d'Harry, est bien plus qu'une simple musique de film.
+            L'article décrit comment cette mélodie, jouée par un orchestre symphonique, évoque un sentiment d'enchantement, de mystère et d'aventure, transportant instantanément les auditeurs dans l'univers fantastique de Poudlard. La mélodie est présente du premier au dernier film de la série, créant une continuité émotionnelle pour les fans.
+            Au-delà de la magie, "Hedwig's Theme" incarne une gamme d'émotions, rappelant aux auditeurs que la magie de Harry Potter réside dans l'amitié, le courage, et le pouvoir de l'amour.Chaque note de "Hedwig's Theme" nous rappelle que la magie est partout, si l'on sait où chercher.
+          </p>
+          <a href=""><img src="/public/img/partager" alt="partager"></a>
+          <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
+        </div>
+        <div class="article5">
+          <h2>Les Mage Derrière la Réalisation de Harry Potter</h2>
+          <a href=""><img src="/public/img/Chaise.webp"></a>
+          <p>
+            Finalement découvrez les Mages Derrière l'Écran : Les Réalisateurs Qui Ont Magistralement Porté Harry Potter à la Vie
+            Les films Harry Potter sont célèbres pour avoir capturé la magie de Poudlard et l'essence des personnages bien-aimés de J.K. Rowling. Cependant, derrière chaque film se trouve un réalisateur talentueux qui a insufflé une vision artistique unique dans cette épopée magique. Dans cet article, nous plongerons dans le monde des réalisateurs qui ont contribué à faire de Harry Potter une réalité cinématographique.
+            L'héritage de Harry Potter continue de briller sur grand écran, et chaque film est une preuve de la magie intemporelle de Poudlard. Plongez dans cette aventure cinématographique et explorez le talent qui a donné vie à cette saga inoubliable. La magie continue, et la quête de Harry, Ron et Hermione reste éternelle.
+          </p>
+          <a href=""><img src="/public/img/partager" alt="partager"></a>
+          <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
+        </div>
+      </section>
+    </main>
     <footer>
       <a href="page1.html"><img src="/public/img/Logo.webp" alt="Retour accueuil"></a>
       <p>MENU</p>
+      <ul>
+        <li><a href="">Article 1</a></li>
+        <li><a href="">Article 2</a></li>
+        <li><a href="">Article 3</a></li>
+        <li><a href="">Article 4</a></li>
+        <li><a href="">Article 5</a></li>
+      </ul>
       <p class="art1">Article 1</p>
       <p class="art2">Article 2</p>
       <p class="art3">Article 3</p>
@@ -115,6 +123,5 @@
         <img class="img" src="public/img/youtube.webp" />
       </div>
     </footer>
-  </main>
 </body>
 </html>
