ajout image et debut page 2

--- a/fr/Page2.html
+++ b/fr/Page2.html
@@ -3,9 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ARTICLE</title>
+    <title>ARTICLE 1</title>
 </head>
 <body>
-    
+    <header>
+        <a href=""><img src="/public/img/logo.webp"></a>
+        <p>A PROPOS</p><p>GLOSSAIRE</p>
+      </header>
+    <main>
+        <div>
+            <img src="/public/img/Head.webp" alt="accueuil">
+            <p>FR / ENG</p>
+            <h1>Dobby est libre</h1>
+        </div>
+        <section>
+            <h1>Harry Potter : La Saga Magique Qui a Enchanté le Monde</h1>
+            <p>Plongez dans l'univers envoûtant de Harry Potter, où la magie et l'aventure se rencontrent. Découvrez comment cette saga légendaire a captivé des millions de cœurs à travers le globe, apportant un sentiment d'émerveillement et d'évasion à chaque page tournée.</p>
+            <div>
+                <img src="/public/img/HarryP1 banner.webp" alt="Affiche">
+                <h2>L'Appel de la Magie</h2>
+                <p>
+                    Depuis sa première publication en 1997, la saga Harry Potter a su conquérir le cœur de lecteurs de tous âges. Le monde magique créé par J.K. Rowling est devenu un phénomène culturel mondial, déclenchant une passion pour la magie, l'amitié, et l'aventure.
+                    "La magie est partout si vous savez où regarder." - Albus Dumbledore
+                </p>
+            </div>
+            <div>
+                <img src="" alt="">
+            </div>
+        </section>
+    </main>
 </body>
 </html>
