--- a/fr/page1.html
+++ b/fr/page1.html
@@ -105,15 +105,11 @@
         <li><a href="">Article 4</a></li>
         <li><a href="">Article 5</a></li>
       </ul>
-      <p class="art1">Article 1</p>
-      <p class="art2">Article 2</p>
-      <p class="art3">Article 3</p>
-      <p class="art4">Article 4</p>
-      <p class="art5">Article 5</p>
-
-      <p class="apropos">A Propos</p>
-      <p class="glossaire">Glossaire</p>
-      <p class="autrespro">Autres projets</p>
+      <ul>
+        <li><a href="apropos.html"></a>A Propos</li>
+        <li><a href="glossaire.html"></a>Glossaire</li>
+        <li><a href="autreprojet"></a>Autres projets</li>
+      </ul>
 
       <p class="suivre">NOUS SUIVRE</p>
       <div class="social-icons">
