--- a/fr/Page2.html
+++ b/fr/Page2.html
@@ -28,9 +28,109 @@
                 </p>
             </div>
             <div>
-                <img src="" alt="">
+                <img src="/public/img/dumbuldore.webp" alt="dumbuldore">
+                <h2>Découvrez l'Univers de Poudlard</h2>
+                <p>Au cœur de cette saga se trouve Poudlard, l'école de sorcellerie qui devient un véritable chez-soi pour Harry, Ron, Hermione, et tous les fans. Les aventures palpitantes à l'intérieur de ses murs ont inspiré des générations de lecteurs et de spectateurs.</p>
+            </div>
+            <div>
+                <h2>La Lutte Contre les Forces du Mal</h2>
+                <p>Mais Harry Potter n'est pas seulement une histoire d'amitié et de magie. C'est aussi une épopée de courage, de détermination, et de résistance contre les forces du mal. Le personnage emblématique de Voldemort représente la menace ultime, et Harry incarne l'espoir et le pouvoir de l'amour.</p>
+            </div>
+            <div>
+                <h2>Au-Delà des Livres et des Films</h2>
+                <img src="/public/img/illucerf.webp" alt="illustration">
+                La magie de Harry Potter Va bien au delà des livres et des films.
+                Les parcs à thème, les jeux vidéo, les produits dérivés et la communauté des fans vibrant son autant de témoignages de son impact. Les fans du monde entier se réunissent pour célébrer cette saga qui continue d'émerveiller, d'inspirer et de rassembler.
+            </div>
+            <div>
+                <h2>Rejoignez-nous dans cette Aventure Magique</h2>
+                <p>Harry Potter est bien plus qu'une série de livres et de films. C'est un voyage magique qui a touché nos cœurs et nos âmes. Sur ce site, nous explorons l'univers de Harry Potter sous toutes ses facettes, avec des analyses approfondies, des anecdotes, des actualités, et un espace pour les fans. Rejoignez-nous dans cette aventure magique où la magie est réelle, l'amitié est précieuse, et l'aventure n'a pas de fin.</p>
+            </div>
+            <a href=""><img src="/public/img/partager" alt="partager"></a>
+            <button>GLOSSAIRE</button>
+        </section>
+        <section class="article_associé">
+                <h1>Article associé</h1>
+            <div>
+                <h2>Présentation du livre Harry Potter à l'École des Sorciers</h2>
+                <img src="/public/img/livre.webp" alt="livre">
+                <p>Harry Potter à l'École des Sorciers est le premier livre de la série Harry Potter, qui a captivé [...]</p>
+                <a href=""><img src="/public/img/partager" alt="partager"></a>
+                <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
+            </div>
+            </section>
+            <section class="autre_article">
+                <h1>Autres articles</h1>
+            <div>
+                <h2>Harry Potter à l'École des Sorciers : Le Début Magique d'une Saga Épique</h2>
+                <img src="/public/img/HarryP1.webp" alt="Lien article 1">
+                <p>
+                    Plongez ensuite dans la magie envoûtante qui a enchanté le monde entier. vous serez transportez au commencement de l'aventure extraordinaire [...]
+                </p>
+                <a href=""><img src="/public/img/partager" alt="partager"></a>
+                <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
+            </div>
+            <div>
+                <h2>Harry Potter à l'École des Sorciers : Le Début Magique d'une Saga Épique</h2>
+                <img src="/public/img/HarryP1.webp" alt="Lien article 1">
+                <p>
+                    Plongez ensuite dans la magie envoûtante qui a enchanté le monde entier. vous serez transportez au commencement de l'aventure extraordinaire [...]
+                </p>
+                <a href=""><img src="/public/img/partager" alt="partager"></a>
+                <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
+            </div>
+            <div>
+                <h2>Harry Potter et les Reliques de la Mort : La Conclusion Épique d'une Saga Magique</h2>
+                <img src="/public/img/Harry_gare.webp" alt="Lien article 3">
+                <p>
+                    Plongez dans le dernier chapitre de l'aventure légendaire de Harry, Ron et Hermione. [...]
+                </p>
+                <a href=""><img src="/public/img/partager" alt="partager"></a>
+                <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
+            </div>
+            <div>
+                <h2>Hedwig's Theme : La Mélodie Enchantée de la Saga Harry Potter</h2>
+                <img src="/public/img/Hedwige.webp" alt="Lien article 4">
+                <p>
+                    Nous verrons la signification profonde de la mélodie emblématique composée [...]
+                </p>
+                <a href=""><img src="/public/img/partager" alt="partager"></a>
+                <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
+            </div>
+            <div>
+                <h2>les Mages Derrière l'Écran</h2>
+                <img src="/public/img/Harry_gare.webp" alt="Lien article 5">
+                <p>
+                    Découvrez les Mages Derrière l'Écran : Les Réalisateurs Qui Ont Magistralement Porté Harry Potter à la Vie. [...]
+                </p>
+                <a href=""><img src="/public/img/partager" alt="partager"></a>
+                <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
             </div>
         </section>
     </main>
+    <footer>
+        <a href="page1.html"><img src="/public/img/Logo.webp" alt="Retour accueuil"></a>
+        <p>MENU</p>
+        <ul>
+          <li><a href="">Article 1</a></li>
+          <li><a href="">Article 2</a></li>
+          <li><a href="">Article 3</a></li>
+          <li><a href="">Article 4</a></li>
+          <li><a href="">Article 5</a></li>
+        </ul>
+        <ul>
+          <li><a href="apropos.html"></a>A Propos</li>
+          <li><a href="glossaire.html"></a>Glossaire</li>
+          <li><a href="autreprojet"></a>Autres projets</li>
+        </ul>
+  
+        <p class="suivre">NOUS SUIVRE</p>
+        <div class="social-icons">
+          <img class="img" src="public/img/facebook.webp" />
+          <img class="img" src="public/img/instagram.webp" />
+          <img class="img" src="public/img/twitter.webp" />
+          <img class="img" src="public/img/youtube.webp" />
+        </div>
+      </footer>
 </body>
 </html>
