--- a/fr/Page3.html
+++ b/fr/Page3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ARTICLE 1</title>
+    <title>ARTICLE 2</title>
 </head>
 <body>
     <header>
@@ -17,34 +17,57 @@
             <h1>Dobby est libre</h1>
         </div>
         <section>
-            <h1>Harry Potter : La Saga Magique Qui a Enchanté le Monde</h1>
-            <p>Plongez dans l'univers envoûtant de Harry Potter, où la magie et l'aventure se rencontrent. Découvrez comment cette saga légendaire a captivé des millions de cœurs à travers le globe, apportant un sentiment d'émerveillement et d'évasion à chaque page tournée.</p>
+            <h1>Harry Potter à l'École des Sorciers : Le Début Magique d'une Saga Épique</h1>
+            <p>Plongez dans le mystère et la magie : Le premier pas épique de Harry Potter à l'École des Sorciers</p>
             <div>
-                <img src="/public/img/HarryP1 banner.webp" alt="Affiche">
-                <h2>L'Appel de la Magie</h2>
+                <img src="/public/img/Banner.webp" alt="Affiche">
                 <p>
-                    Depuis sa première publication en 1997, la saga Harry Potter a su conquérir le cœur de lecteurs de tous âges. Le monde magique créé par J.K. Rowling est devenu un phénomène culturel mondial, déclenchant une passion pour la magie, l'amitié, et l'aventure.
-                    "La magie est partout si vous savez où regarder." - Albus Dumbledore
+                    Le monde de la littérature a été ensorcelé par l'arrivée du jeune sorcier qui allait changer à jamais notre perception de la magie. "Harry Potter à l'École des Sorciers" est le premier chapitre de l'incroyable voyage de Harry Potter, écrit par la talentueuse J.K. Rowling. Dans cet article, nous plongeons dans le livre qui a tout déclenché,
+                    l'histoire qui a captivé des millions de lecteurs à travers le monde.
                 </p>
             </div>
             <div>
-                <img src="/public/img/dumbuldore.webp" alt="dumbuldore">
-                <h2>Découvrez l'Univers de Poudlard</h2>
-                <p>Au cœur de cette saga se trouve Poudlard, l'école de sorcellerie qui devient un véritable chez-soi pour Harry, Ron, Hermione, et tous les fans. Les aventures palpitantes à l'intérieur de ses murs ont inspiré des générations de lecteurs et de spectateurs.</p>
+                <h2>Le Commencement d'une Aventure Magique</h2>
+                <p>
+                    Le livre s'ouvre sur une introduction mystérieuse qui nous présente la famille Dursley et une étrange nouvelle qui secoue le monde.
+                    Nous découvrons rapidement que les Dursley sont tout sauf ordinaires et que la magie est sur le point de faire son entrée fracassante dans leur vie.
+                    <img src="/public/img/dorslay.webp" alt="dorslay">
+                </p>
             </div>
             <div>
-                <h2>La Lutte Contre les Forces du Mal</h2>
-                <p>Mais Harry Potter n'est pas seulement une histoire d'amitié et de magie. C'est aussi une épopée de courage, de détermination, et de résistance contre les forces du mal. Le personnage emblématique de Voldemort représente la menace ultime, et Harry incarne l'espoir et le pouvoir de l'amour.</p>
+                <h2>La Lettre Qui Change Tout</h2>
+                <p>
+                    Harry Potter, le jeune orphelin, reçoit bientôt une lettre étonnante, l'invitant à rejoindre Poudlard, l'école de sorcellerie. Ce simple parchemin déclenche une série d'événements extraordinaires,
+                    et Harry se lance dans une aventure au-delà de son imagination.
+                </p>
             </div>
             <div>
-                <h2>Au-Delà des Livres et des Films</h2>
-                <img src="/public/img/illucerf.webp" alt="illustration">
-                La magie de Harry Potter Va bien au delà des livres et des films.
-                Les parcs à thème, les jeux vidéo, les produits dérivés et la communauté des fans vibrant son autant de témoignages de son impact. Les fans du monde entier se réunissent pour célébrer cette saga qui continue d'émerveiller, d'inspirer et de rassembler.
+                <h2>L'École de Poudlard</h2>
+                <a href=""><img src="/public/img/poudlard.webp" alt="poudlard"></a>
+                <p>
+                    À Poudlard, Harry découvre un monde caché rempli de créatures fantastiques, de magie, et de mystère. Il se lie d'amitié avec Ron et Hermione,
+                    et ensemble, ils découvrent les merveilles et les dangers de l'école.
+                </p>
             </div>
             <div>
-                <h2>Rejoignez-nous dans cette Aventure Magique</h2>
-                <p>Harry Potter est bien plus qu'une série de livres et de films. C'est un voyage magique qui a touché nos cœurs et nos âmes. Sur ce site, nous explorons l'univers de Harry Potter sous toutes ses facettes, avec des analyses approfondies, des anecdotes, des actualités, et un espace pour les fans. Rejoignez-nous dans cette aventure magique où la magie est réelle, l'amitié est précieuse, et l'aventure n'a pas de fin.</p>
+                <h1>La Chasse au Sorcier Maléfique</h1>
+                <p>
+                    Le livre dévoile progressivement l'existence de Lord Voldemort, le sorcier maléfique responsable de la mort des parents d'Harry.
+                    La quête pour découvrir la vérité sur Voldemort et ses intentions sombres devient le fil conducteur de la série.
+                </p>
+                <img src="/public/img/vold more.webp" alt="Voldemort">
+            </div>
+            <div>
+                <h1>Un Classique de la Littérature Fantastique</h1>
+                <p>
+                    Harry Potter à l'École des Sorciers" est bien plus qu'un simple livre pour enfants. C'est une œuvre qui traverse les générations, rappelant à chacun l'importance de l'amitié, du courage,
+                    et de la persévérance. La magie de J.K. Rowling a donné naissance à une saga épique qui continue à captiver des lecteurs du monde entier.
+                </p>
+                <p>
+                    Que vous soyez un fan de longue date ou que vous découvriez Harry Potter pour la première fois, ce livre est le point de départ d'une aventure incroyable qui vous emmènera dans un monde où la magie est réelle,
+                    les amis sont précieux, et l'amour triomphe du mal.
+                </p>
+                <img src="/public/img/illulivre.webp" alt="illulivre">
             </div>
             <a href=""><img src="/public/img/partager" alt="partager"></a>
             <button>GLOSSAIRE</button>
@@ -62,10 +85,10 @@
             <section class="autre_article">
                 <h1>Autres articles</h1>
             <div>
-                <h2>Harry Potter à l'École des Sorciers : Le Début Magique d'une Saga Épique</h2>
-                <img src="/public/img/HarryP1.webp" alt="Lien article 1">
+                <h2>Harry Potter : La Saga Magique Qui a Enchanté le Monde.</h2>
+                <img src="/public/img/HarryP1 banner.webp" alt="Lien article 2">
                 <p>
-                    Plongez ensuite dans la magie envoûtante qui a enchanté le monde entier. vous serez transportez au commencement de l'aventure extraordinaire [...]
+                    exploration immersive de l'univers captivant de Harry Potter. Depuis sa première publication en 1997, cette saga [...]
                 </p>
                 <a href=""><img src="/public/img/partager" alt="partager"></a>
                 <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
