--- a/fr/Page3.html
+++ b/fr/Page3.html
@@ -126,11 +126,11 @@
         <a href="page1.html"><img src="/public/img/Logo.webp" alt="Retour accueuil"></a>
         <p>MENU</p>
         <ul>
-          <li><a href="">Article 1</a></li>
-          <li><a href="">Article 2</a></li>
-          <li><a href="">Article 3</a></li>
-          <li><a href="">Article 4</a></li>
-          <li><a href="">Article 5</a></li>
+            <li><a href="">La Saga Magique Qui a Enchanté le Monde</a></li>
+            <li><a href="">Le Début Magique d'une Saga Épique</a></li>
+            <li><a href="">La Conclusion Épique d'une Saga Magique</a></li>
+            <li><a href="">La Mélodie Enchantée de la Saga Harry Potter</a></li>
+            <li><a href="">Les Mage Derrière la Réalisation de Harry Potter</a></li>
         </ul>
         <ul>
           <li><a href="apropos.html"></a>A Propos</li>
