correction erreur code

--- a/fr/Page6.html
+++ b/fr/Page6.html
@@ -32,7 +32,7 @@
             <section>
                 <div>
                     <h2>1. Chris Columbus</h2>
-                    <img src="chris" alt="Chris Columbus">
+                    <img src="/public/img/chris.webp" alt="Chris Columbus">
                     <p>
                         Le réalisateur américain Chris Columbus a pris les rênes des deux premiers films de la saga, "Harry Potter à l'École des Sorciers" et "Harry Potter et la Chambre des Secrets."
                         Son travail a établi le ton et l'esthétique du monde magique, apportant la magie de Poudlard à l'écran.
@@ -40,7 +40,7 @@
                 </div>
                 <div>
                     <h2>2. Alfonso Cuarón</h2>
-                    <img src="alfonso" alt="Alfonso Cuarón">
+                    <img src="/public/img/alfonso.webp" alt="Alfonso Cuarón">
                     <p>
                         Alfonso Cuarón a dirigé le troisième film, "Harry Potter et le Prisonnier d'Azkaban." Sa vision artistique unique a donné à ce volet un ton plus sombre et réaliste,
                         tout en explorant davantage les thèmes de l'adolescence et de l'identité.
@@ -48,7 +48,7 @@
                 </div>
                 <div>
                     <h2>3. Mike Newell</h2>
-                    <img src="mike" alt="Mike Newell">
+                    <img src="/public/img/mike.webp" alt="Mike Newell">
                     <p>
                         Le réalisateur britannique Mike Newell a pris les commandes du quatrième film, "Harry Potter et la Coupe de Feu." Il a réussi à capturer l'excitation des compétitions magiques du Tournoi des Trois Sorciers,
                         tout en continuant à développer l'intrigue principale.
@@ -56,7 +56,7 @@
                 </div>
                 <div>
                     <h2>4. David Yates</h2>
-                    <img src="david" alt="David Yates">
+                    <img src="/public/img/david.webp" alt="David Yates">
                     <p>
                         David Yates est devenu le réalisateur principal de la saga à partir du cinquième film, "Harry Potter et l'Ordre du Phénix."
                         Il a continué de diriger les quatre films suivants, y compris les deux parties de "Harry Potter et les Reliques de la Mort." Son style a apporté une dimension plus sombre et réaliste à la saga,
@@ -66,7 +66,7 @@
             </section>
             <div>
                 <h2>La Conclusion Émouvante</h2>
-                <img src="bannerconclu" alt="banniere">
+                <img src="/public/img/bannerconclu.webp" alt="banniere">
                 <p>
                     Chacun de ces réalisateurs a apporté sa touche personnelle à la saga Harry Potter, contribuant à créer un ensemble cohérent tout en explorant des aspects uniques de l'univers.
                     Leurs talents ont permis de captiver des millions de fans à travers le monde.
