--- a/fr/Page2.html
+++ b/fr/Page2.html
@@ -103,11 +103,11 @@
         <a href="page1.html"><img src="/public/img/Logo.webp" alt="Retour accueuil"></a>
         <p>MENU</p>
         <ul>
-            <li><a href="">La Saga Magique Qui a Enchanté le Monde</a></li>
-            <li><a href="">Le Début Magique d'une Saga Épique</a></li>
-            <li><a href="">La Conclusion Épique d'une Saga Magique</a></li>
-            <li><a href="">La Mélodie Enchantée de la Saga Harry Potter</a></li>
-            <li><a href="">Les Mage Derrière la Réalisation de Harry Potter</a></li>
+            <li><a href="Page2.html">La Saga Magique Qui a Enchanté le Monde</a></li>
+          <li><a href="Page3.html">Le Début Magique d'une Saga Épique</a></li>
+          <li><a href="Page4.html">La Conclusion Épique d'une Saga Magique</a></li>
+          <li><a href="Page5.html">La Mélodie Enchantée de la Saga Harry Potter</a></li>
+          <li><a href="Page6.html">Les Mage Derrière la Réalisation de Harry Potter</a></li>
         </ul>
         <ul>
           <li><a href="apropos.html"></a>A Propos</li>
