--- a/fr/Page5.html
+++ b/fr/Page5.html
@@ -54,17 +54,6 @@
                 </p>
             </div>
             <div>
-                <h2>Le Courage et la Détermination</h2>
-                <img src="/public/img/amis.webp" alt="amis">
-                <p>
-                    Plus que jamais, "Harry Potter et les Reliques de la Mort" met en avant le courage, l'amitié et la détermination de nos héros. Ils sont prêts à tout sacrifier pour le bien du monde sorcier,
-                    et leur lien indéfectible est au cœur de l'histoire.
-                </p>
-                <p>Au-delà des mots, la musique de John Williams a réussi à donner vie aux thèmes les plus profonds de Harry Potter. Elle nous rappelle que la magie n'est pas seulement une série de sorts et de potions,
-                    mais une aventure émotionnelle, une exploration de l'amitié, du courage, et du pouvoir de l'amour.
-                </p>
-            </div>
-            <div>
                 <h2>L'Épine Dorsale de la Magie de Harry Potter</h2>
                 <p>
                     En fin de compte, c’est plus qu'une simple composition musicale. C'est une partie essentielle de l'âme de Harry Potter. Chaque note nous rappelle que la magie est réelle, que l'amitié est précieuse, et que l'aventure n'a pas de fin. La prochaine fois que vous entendrez "Hedwig's Theme" fermez les yeux,
@@ -135,11 +124,11 @@
         <a href="page1.html"><img src="/public/img/Logo.webp" alt="Retour accueuil"></a>
         <p>MENU</p>
         <ul>
-            <li><a href="">La Saga Magique Qui a Enchanté le Monde</a></li>
-            <li><a href="">Le Début Magique d'une Saga Épique</a></li>
-            <li><a href="">La Conclusion Épique d'une Saga Magique</a></li>
-            <li><a href="">La Mélodie Enchantée de la Saga Harry Potter</a></li>
-            <li><a href="">Les Mage Derrière la Réalisation de Harry Potter</a></li>
+            <li><a href="Page2.html">La Saga Magique Qui a Enchanté le Monde</a></li>
+          <li><a href="Page3.html">Le Début Magique d'une Saga Épique</a></li>
+          <li><a href="Page4.html">La Conclusion Épique d'une Saga Magique</a></li>
+          <li><a href="Page5.html">La Mélodie Enchantée de la Saga Harry Potter</a></li>
+          <li><a href="Page6.html">Les Mage Derrière la Réalisation de Harry Potter</a></li>
         </ul>
         <ul>
           <li><a href="apropos.html"></a>A Propos</li>
