--- a/fr/apropos.html
+++ b/fr/apropos.html
@@ -10,6 +10,7 @@
         <a href="page1.html"><img src="/public/img/logo.webp"></a>
         <p>A PROPOS</p><p>GLOSSAIRE</p>
       </header>
+      <img src="/public/img/head2.webp" alt="head2">
       <main>
         <div>
         <h2>A Propos</h2>
