--- a/en/page1en.html
+++ b/en/page1en.html
@@ -6,19 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/src/css/stlye.css" />
 
-    <title>Dobby est libre</title>
+    <title>Dobby is Free</title>
   </head>
 <body>
     <header>
-      <a href=""><img src="/public/img/logo.webp"></a>
-      <p>A PROPOS</p><p>GLOSSAIRE</p>
+      <a href="page1en.html"><img src="/public/img/logo.webp"></a>
+      <p>ABOUT US</p><p>GLOSSARY</p>
     </header>
     <main>
       <section class="landing">
         <img src="/public/img/Head.webp" alt="accueuil">
         <div>
           <p>FR / ENG</p>
-          <h1>Dobby est libre</h1>
+          <h1>Dobby is Free</h1>
         </div>
         <p>
             Welcome to the magical world of our site dedicated to Harry Potter! Immerse yourself in the enchanting universe of the saga that has captivated millions of fans around the world.
